Bug 123456 Change reviews status...
Testing

--- a/src/templates/ratings/main.html
+++ b/src/templates/ratings/main.html
@@ -37,7 +37,7 @@
       <p class="spinner alt padded"></p>
     {% empty %}
       <p class="no-results">
-        {{ _('This app has no reviews.') }}
+        {{ _('This app has not received any reviews.') }}
       </p>
     {% end %}
   </div>
